  * Added Mesh instancing support via love.graphics.drawInstanced and Mesh:attachAttribute.
  * Added a Mesh:attachAttribute variant that takes a different target attribute name.
  * Added Mesh:detachAttribute.
  * Added a variant of Mesh:setVertexMap which accepts a Data object.
  * Added love.window.updateMode.
  * Added the ability to prevent love from creating a stencil buffer for the window.

  * Changed all color values to be in the range 0-1, rather than 0-255.
  * Changed high-dpi functionality to require much less code (often none at all) for things to appear at the correct sizes and positions.
  * Changed love.graphics.print and friends to ignore carriage returns.
  * Changed the 'multiply' blend mode to error if not used with the 'premultiplied' blend alpha mode, since the formula only works with that anyway.
  * Changed some love.graphics, love.window, and love.event APIs to cause an error if a Canvas is active.
  * Changed stenciling functionality with a Canvas active to require stencil=true (or a custom stencil-formatted Canvas) to be set in setCanvas.
  * Changed Mesh:setDrawRange to take 'start' and 'count' parameters instead of 'min' and 'max'.
  * Changed the 'vsync' field of love.window.setMode and t.window in love.conf. It's now an integer with 0 disabling vsync.
  * Changed the audio playback APIs drastically.
  * Changed enet to no longer set the 'enet' global, again matching luasocket.
  * Changed Source seeking behaviour, all kinds of Sources now behave similarly when seeking past the boundaries.

  * Fixed a memory leak when sending love objects to threads which never load that object's module.
  * Fixed os.execute always returning -1 in Linux.
  * Fixed the default reference angle for WeldJoint, PrismaticJoint, and RevoluteJoint.
  * Fixed love.graphics.set/getClipboard text to error instead of crashing, when a window hasn't been created.
  * Fixed Joystick:getGamepadMapping to work with xinput controllers.